<resources>
    <string name="app_name">Araba Driver</string>
    <string name="hello">Hello araba app!!!!</string>
    <string name="loginpage">Login page</string>
    <string name="fbtext">Login with facebook</string>
    <string name="emailtext">Login with email</string>
    <string name="registrationmessage">Register here</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="emailhit">Email or Phone</string>
    <string name="fullnamehint">Full Name</string>
    <string name="passwordhint">Password</string>
    <string name="phonehint">Phone</string>
    <string name="signup">SIGN UP</string>
    <string name="send">Send</string>
    <string name="signout">Logout</string>
    <string name="facebook_app_id">1336474566461130</string>
    <string name="google_map_api_key">AIzaSyDv0IZ4oh8MDVd62n-_KtDxBnEXeV4k2xg</string>
    <string name="documents">Documents</string>
    <string name="continuebtn">CONTINUE</string>
    <string name="takephotobtn">TAKE PHOTO</string>
    <string name="info">Take a photo of your Document</string>
    <string name="docinfo">Ensure all information is readable and not blurry.Make sure
        that all corners of the document are visible.Your document may not be accepted
        if it cannot be read properly or all four corners are not visible.</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="myProfile">My Profile</string>

    <!--Dialog-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="must_have_value">must have a value</string>

    <string name="no_internet">No internet found, Please ensure you have internet connection to proceed.</string>
    <string name="empty_field" formatted="false">Please fill your %s first</string>
    <string name="please_wait">Please wait....</string>

    <!--Login-->
    <string name="login_email">Login with Email</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="register_now">Not yet a member? Register Now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_desc">We need your registered email address to send you password reset instructions.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verify_email">Please verify your email to continue.</string>
    <string name="please_input">Please input the empty field.</string>
    <string name="invalid_mail">Invalid email</string>

    <!--Register-->
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms">By checking this, you are agree with our terms of use and privacy policy agreement.</string>
    <string name="register">Register</string>
    <string name="already_member">Already Member?</string>
    <string name="agree_term">Please agree with term and condition to proceed.</string>
    <string name="password_no_match">Your password and confirm password not match.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="imageViewdescription">ImageView</string>
    <string name="emailvalue">ashraftaukir@gmail.com</string>
    <string name="name_tv">Name:</string>
    <string name="driver_name_tv">Ashraf Taukir</string>
    <string name="driverinfo_tv">Araba drivers offer passengers a safer way to get home after a late night out,
        a hassle-free way to get to the airport, and in some markets, even deliver users’ orders from restaurants or other local businesses.
        When you sign up as an Araba driver, you’ll be an independent contractor and will get paid weekly.
        Araba has played a large part in ushering in the on-demand economy, which is powered by contract workers</string>
    <string name="earnings">Earnings</string>
    <string name="lastweek">LastWeek</string>
    <string name="lastmonth">LastMonth</string>
    <string name="lastyear">LastYear</string>
    <string name="totalearnings">ToatlEarnings</string>
    <string name="you_r_now">You are now </string>
    <string name="goto_Online">Go to online</string>
    <string name="value">adapterValue</string>
    <string name="u_r_signup">YOU\'RE ALL SIGNED UP!</string>
    <string name="landinginfo">Congratulations,you have completed the driver signup process.
    You will be notified shortly,once you are approved.</string>
    <string name="tryagain">Please try again</string>


</resources>
