<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/fullnameet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emailaddresset"
            android:layout_marginBottom="@dimen/forgotpasswordtextsize"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/customedittext"
            android:hint="@string/fullnamehint"
            android:inputType="text"
            android:padding="@dimen/margin10dp"
            android:textSize="@dimen/forgotpasswordtextsize"

            />

        <EditText
            android:id="@+id/emailaddresset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/customedittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin10dp"
            android:textSize="@dimen/forgotpasswordtextsize" />


        <EditText
            android:id="@+id/phoneinfoet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailaddresset"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/forgotpasswordtextsize"
            android:background="@drawable/customedittext"
            android:hint="@string/phonehint"
            android:inputType="phone"
            android:padding="@dimen/margin10dp"
            android:textSize="@dimen/forgotpasswordtextsize"

            />

        <EditText
            android:id="@+id/passwordet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneinfoet"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/forgotpasswordtextsize"
            android:background="@drawable/customedittext"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"
            android:padding="@dimen/margin10dp"
            android:textSize="@dimen/forgotpasswordtextsize"

            />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordet"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/customloginbutton"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/forgotpasswordtextsize" />


    </RelativeLayout>

</RelativeLayout>