<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alligntop"
            android:layout_marginLeft="@dimen/alligntop"
            android:gravity="left"
            android:text="@string/info"
            android:textSize="@dimen/margin20sp"
            android:textStyle="normal"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_marginLeft="@dimen/alligntop"
            android:layout_marginTop="@dimen/alligntop"
            android:gravity="left"
            android:text="@string/docinfo"
            android:textSize="@dimen/margin15sp" />

        <View
            android:id="@+id/viewline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/continuebtn"
            android:layout_marginBottom="@dimen/alligntop"
            android:background="@color/colorash" />

        <Button
            android:id="@+id/continuebtn"
            style="@style/App_ButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/takephotobtn" />

    </RelativeLayout>


</RelativeLayout>